Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp
@@ -34,6 +34,7 @@
 #include <mutex>
 #include <wtf/Condition.h>
 #include <wtf/Lock.h>
+#include <wtf/PageBlock.h>
 #include <wtf/RandomNumber.h>
 #include <wtf/RunLoop.h>
 #include <wtf/text/CString.h>
@@ -47,7 +48,11 @@ static const char versionDirectoryPrefix[] = "Version ";
 static const char recordsDirectoryName[] = "Records";
 static const char blobsDirectoryName[] = "Blobs";
 static const char blobSuffix[] = "-blob";
-constexpr size_t maximumInlineBodySize { 16 * 1024 };
+
+static inline size_t maximumInlineBodySize()
+{
+    return WTF::pageSize();
+}
 
 static double computeRecordWorth(FileTimes);
 
@@ -291,7 +296,7 @@ static size_t estimateRecordsSize(unsigned recordCount, unsigned blobCount)
 {
     auto inlineBodyCount = recordCount - std::min(blobCount, recordCount);
     auto headerSizes = recordCount * 4096;
-    auto inlineBodySizes = (maximumInlineBodySize / 2) * inlineBodyCount;
+    auto inlineBodySizes = (maximumInlineBodySize() / 2) * inlineBodyCount;
     return headerSizes + inlineBodySizes;
 }
 
@@ -799,7 +804,7 @@ void Storage::dispatchPendingWriteOperations()
 
 bool Storage::shouldStoreBodyAsBlob(const Data& bodyData)
 {
-    return bodyData.size() > maximumInlineBodySize;
+    return bodyData.size() > maximumInlineBodySize();
 }
 
 void Storage::dispatchWriteOperation(std::unique_ptr<WriteOperation> writeOperationPtr)
